# sam-3d-objects-executorch

./: .gitignore  README.md  pyproject.toml
tests/: test_basic.py
